# fastapi-hpd

./: .flake8  .gitignore  Dockerfile  README.md  database.json  docker-compose.yml  generate_data.py  main.py  pyproject.toml  sonar-project.properties  test.py
app/: config.py  database.py  main.py  providers.sql  schemas.py
app/core/: config.py  dataimp.py  exceptions.py  utils.py
app/repository/: provider.py
app/routers/: provider.py
database/: records.pickle
frontend/: package-lock.json  package.json  tailwind.config.js  tailwind.css
frontend/public/: index.html
frontend/public/css/: styles.css
frontend/public/js/: main.js  overlays.js  toasts.js
public/: index.html
public/css/: styles.css
public/js/: main.js
tests/: test_providers.py
