[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Gautam Mishra <mishragautam96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
Faker = "^8.8.2"
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
